# currency-symbols

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  conftest.py  pyproject.toml  run_tests.py  setup.py
.github/workflows/: publish.yml  pytest.yml
currency-symbols/: currency_symbols.py  test.py
currency_symbols/: __init__.py  _constants.py  constants.py  currency_symbols.py  test.py
tests/: test_currency_symbols.py
