[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "currency-symbols"
description = "Get currency symbol by currency code"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Arshad Kazmi", email = "arshadkazmi42@gmail.com" },
]
requires-python = ">=3.9"
keywords = ["currency", "currency-symbols", "iso-4217", "currency-code", "symbols"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/arshadkazmi42/currency-symbols"
Repository = "https://github.com/arshadkazmi42/currency-symbols"
Issues = "https://github.com/arshadkazmi42/currency-symbols/issues"

[tool.setuptools]
packages = ["currency_symbols"]

[tool.setuptools.package-data]
currency_symbols = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "currency_symbols.__version__" }
